# snu-ece-20spr-cg-proj

./: .gitignore  GraphicsLab1.pptx  GraphicsLabIntro.pptx  README.md
hw1/: '  :w
hw1/problem1/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp  shader.fs  shader.vs
hw1/problem2/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gameobjects.h  interfaces.h  main  main.cpp  math_utils.h  shader.fs  shader.vs
hw2/resources/Shape Primitives/: cubePT.json  quadPT.json  trianglePC.json
hw2/shaders/: shader.fs  shader.vs  shader_skybox.fs  shader_skybox.vs
hw2/src/: CMakeLists.txt  camera.h  engine_global.h  environment_manager.h  game_manager.h  gameobject.h  geometry.h  geometry_primitives.h  interface.h  main  main.cpp  math_utils.h  player_controller.h  screen.h  shader.h  string_utils.h  system_global.h  texture.h  texture_cube.h  timer.h
hw3/problem1,2/src/: CMakeLists.txt  (+12 more)
hw3/problem3/: CMakeLists.txt  class.cpp  class.h  main  main.cpp  shader.h
hw4/shaders/: shader_lighting.frag  shader_lighting.vert  shader_skybox.frag  shader_skybox.vert  shadow.frag  shadow.vert
hw4/src/: CMakeLists.txt  clear_cmake.sh  main.cpp
hw4_supp/: shadow_debug.frag  shadow_debug.vert
hw5/shaders/: shader_ray_tracing.frag  shader_ray_tracing.vert
hw5/src/: CMakeLists.txt  main.cpp
lab1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
lab2/: CMakeLists.txt  main  main.cpp  shader.fs  shader.vs
lab3/: CMakeLists.txt  geometry_shader.fs  geometry_shader.gs  geometry_shader.vs  main  main.cpp
(+50 files in other folders)
