cmake_minimum_required(VERSION 3.10)
find_package(PkgConfig REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)
include_directories(${GLFW_INCLUDE_DIRS})
include_directories(${CMAKE_SOURCE_DIR}/glad/include)
set(SOURCE_FILES main.cpp glad/src/glad.c)
add_executable(main ${SOURCE_FILES})
target_link_libraries(main ${GLFW_STATIC_LIBRARIES})
