cmake_minimum_required(VERSION 3.10)
cmake_policy(VERSION 3.10)
project("Lab3" C CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

if(WIN32)
  include_directories("C:/OpenGL/includes")
  link_directories("C:/OpenGL/lib")
  set(SOURCE_FILES main.cpp glad/src/glad.c)
  add_executable(main ${SOURCE_FILES})
  target_link_libraries(main opengl32 glfw3)
endif(WIN32)

if(UNIX)
  find_package(PkgConfig REQUIRED)
  pkg_search_module(GLFW REQUIRED glfw3)
  find_package(glm REQUIRED)
  include_directories(${GLFW_INCLUDE_DIRS})
  include_directories(${CMAKE_SOURCE_DIR}/glad/include)
  set(SOURCE_FILES main.cpp glad/src/glad.c)
  add_executable(main ${SOURCE_FILES})
  target_link_libraries(main ${GLFW_STATIC_LIBRARIES})
endif(UNIX)
